--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
+    "@mui/x-date-pickers": "^8.10.0",
+    "framer-motion": "^12.23.12",
     "next": "^14.2.14",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
